# ocaml_problems

./: dune-project  ocaml_problems.opam
lib/: dune  ocaml_problems.ml  prob_1.ml  prob_10.ml  prob_11.ml  prob_12.ml  prob_14.ml  prob_15.ml  prob_16.ml  prob_17.ml  prob_18.ml  prob_19.ml  prob_2.ml  prob_20.ml  prob_21.ml  prob_22.ml  prob_3.ml  prob_4.ml  prob_49.ml  prob_5.ml  prob_57.ml  prob_6.ml  prob_67.ml  prob_7.ml  prob_70.ml  prob_8.ml  prob_81.ml  prob_82.ml  prob_9.ml  prob_92.ml  prob_95.ml
test/: dune  test_ocaml_problems.ml
